--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
+    "styled-components": "^5.3.5",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.24",
