--- a/package.json
+++ b/package.json
@@ -4,18 +4,18 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5",
+    "@iconify/react": "^4.1.1",
     "@types/react": "^17.0.33",
-    "@types/react-dom": "^17.0.10",
+    "@types/react-dom": "^18.2.7",
     "@types/styled-components": "^5.1.24",
     "@vitejs/plugin-react": "^1.0.7",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5",
     "typescript": "^4.5.4",
     "vite": "^2.8.0"
   }
